public/style.css
html {
  scroll-behavior: smooth;
}

body {
  padding-top: 65px;
  font-family: "Encode Sans Expanded", serif;
  position: relative;
  margin: 0;
  color: #ffffff;
}

div {
  display: block;
}


.nav {
  height: 65px;
  position: fixed;
  background-color: #121212;
  z-index: 1;
}

.nav-container {
  padding-left: 30px;
  padding-right: 30px;
  justify-content: space-between;
}

.nav,
.nav-container {
  width: 100%;
  display: flex;
  align-items: center;
}

.bg-primary {
  background-color: #0e0e0e !important;
}

.nav-links {
  display: flex;
  align-items: center;
  justify-content: flex-end;
}

.navbar-nav {
  display: flex;
  flex-direction: column;
  padding-left: 0;
  margin-bottom: 0;
  list-style: none;
}

.overview {
  height: 100vh;
  position: fixed;
  width: 100vw;
  padding-top: 65px;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: #141414;
}

.container {
  margin: 0 auto;
  padding-left: 16px;
  padding-right: 16px;
}

.main-content {
  display: inline-block;
  width: 100%;
  background-color: #272626;
  position: relative;
  margin-top: calc(100vh + 65px);
}

.about {
  padding: 50px 0;
  position: relative;
  width: 100%;
  background-color: #2b2b2b;
}

.about-content {
  display: flex;
  align-items: center;
  justify-content: center;
}

.intro {
  padding-right: 50px;
}

.picture-frame {
  padding-left: 50px;
}

.skills {
  background-color: #272626;
  width: 100%;
  padding: 50px 0;
  position: relative;
}


.certifications {
  padding: 50px 0;
  position: relative;
  width: 100%;
  background-color: #2b2b2b;
}

.certifications-content {
  padding: 100px;
}

.projects {
  background-color: #272626;
  padding: 50px;
  position: relative;
}

.projects-content {
  padding: 100px;
}

.contact {
  background-color: #121212;
  padding: 50px;
  position: relative;
}

.contact-content {
  padding: 100px;
}

#name-typewriter {
  position: relative;
  font-size: 80px;
}

.input-cursor {
  display: inline-block;
  width: 6px;
  height: 66px;
  background-color: white;
  margin-left: 8px;
}

@keyframes blink {
  0% {
    opacity: 1;
  }

  40% {
    opacity: 1;
  }

  60% {
    opacity: 0;
  }

  100% {
    opacity: 0;
  }
}

.input-cursor {
  animation: blink 0.6s linear infinite alternate;
}

#slogan {
  position: relative;
  font-size: 30px;
}

#school,
#cloud,
#AWS {
  color: #3c6142;
}

h3 {
  font-size: 50px;
}

#aboutme-content {
  font-size: 23px;
}



@media screen and (max-width: 768px) {
  .about-content {
    flex-direction: column;
    justify-content: center;
  }

  .intro {
    padding-right: 0px;
  }


}


.contact-links {
  border-radius: 1px 1px 10px 10px;
  display: flex;
  height: 40px;
  align-items: center;
  justify-content: center;
  background-color: #121212;
}

img.picture {
  border-radius: 10px 10px 1px 1px;
}

.skills-content {
  justify-content: center;
}

.skills-container {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  width: 100%;
}

ul {
  list-style: none;
  padding-left: 10px;
}

.skills-list {
  display: flex;
  font-size: 25px;
  justify-content: space-between;
  
}


h3 {
  color: #3c6142;
}

.bars {
  display: flex;
  flex-direction: column;
}

progress {
  border: 0;
  height: 20px;
  border-radius: 20px;
}

progress::-webkit-progress-bar {
  border: 0;
  height: 20px;
  border-radius: 20px;
  background-color: #333333;

}

progress::-webkit-progress-value {
  border: 0;
  height: 20px;
  border-radius: 20px;
  background-color: #3c6142;
}

progress::-moz-progress-bar {
  border: 0;
  height: 20px;
  border-radius: 20px;
  background-color: #2b2b2b;
}

@media screen and (max-width: 768px) {
  .skills-container {
    flex-wrap: wrap;
  }

  .skills-list {
    font-size: 30px;
    flex-wrap: nowrap;
    justify-content: start;
  }
}

@media screen and (max-width: 991px) {
  .skills-list {
    font-size: 21px;
  }
}
.lists-col-one,.lists-col-two{
  width: 420px;
}

